force-app/main/default/objects/Product2/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <label>Age</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>12 mesos</fullName>
            </value>
            <value>
                <fullName>A partir de 1 any</fullName>
            </value>
            <value>
                <fullName>1 a 2 anys</fullName>
            </value>
            <value>
                <fullName>1 a 3 anys</fullName>
            </value>
            <value>
                <fullName>18 mesos</fullName>
            </value>
            <value>
                <fullName>A partir de 18 mesos</fullName>
            </value>
            <value>
                <fullName>2 anys</fullName>
            </value>
            <value>
                <fullName>A partir de 2 anys</fullName>
            </value>
            <value>
                <fullName>2 a 3 anys</fullName>
            </value>
            <value>
                <fullName>3 anys</fullName>
            </value>
            <value>
                <fullName>A partir de 3 anys</fullName>
            </value>
            <value>
                <fullName>3 a 4 anys</fullName>
            </value>
            <value>
                <fullName>3 a 5 anys</fullName>
            </value>
            <value>
                <fullName>3 a 6 anys</fullName>
            </value>
            <value>
                <fullName>4 anys</fullName>
            </value>
            <value>
                <fullName>A partir de 4 anys</fullName>
            </value>
            <value>
                <fullName>4 a 5 anys</fullName>
            </value>
            <value>
                <fullName>4 a 6 anys</fullName>
            </value>
            <value>
                <fullName>4 a 7 anys</fullName>
            </value>
            <value>
                <fullName>4 a 8 anys</fullName>
            </value>
            <value>
                <fullName>5 anys</fullName>
            </value>
            <value>
                <fullName>A partir de 5 anys</fullName>
            </value>
            <value>
                <fullName>5 a 6 Anys</fullName>
            </value>
            <value>
                <fullName>5 a 7 anys</fullName>
            </value>
            <value>
                <fullName>5 a 8 anys</fullName>
            </value>
            <value>
                <fullName>5 a 12 anys</fullName>
            </value>
            <value>
                <fullName>6 anys</fullName>
            </value>
            <value>
                <fullName>A partir de 6 anys</fullName>
            </value>
            <value>
                <fullName>6 a 7 anys</fullName>
            </value>
            <value>
                <fullName>6 a 8 anys</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>