force-app/main/default/objects/Product2/fields/Available_in_e_commerce__c.field-meta.xml
<CustomField>
    <fullName>Available_in_e_commerce__c</fullName>
    <label>Available in E-commerce</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B2C</fullName>
            </value>
            <value>
                <fullName>B2B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>