force-app/main/default/objects/Product2/fields/Binding__c.field-meta.xml
<CustomField>
    <fullName>Binding__c</fullName>
    <label>Binding</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dura</fullName>
            </value>
            <value>
                <fullName>Tova</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>