force-app/main/default/objects/Product2/fields/Book_Format__c.field-meta.xml
<CustomField>
    <fullName>Book_Format__c</fullName>
    <label>Book Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Butxaca</fullName>
            </value>
            <value>
                <fullName>Carpetes</fullName>
            </value>
            <value>
                <fullName>Ebook</fullName>
            </value>
            <value>
                <fullName>Epub</fullName>
            </value>
            <value>
                <fullName>Espiral</fullName>
            </value>
            <value>
                <fullName>Fascicle</fullName>
            </value>
            <value>
                <fullName>Multimèdia</fullName>
            </value>
            <value>
                <fullName>PDF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>