force-app/main/default/objects/Product2/fields/Brand_Publishing__c.field-meta.xml
<CustomField>
    <fullName>Brand_Publishing__c</fullName>
    <label>Brand / Publishing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>