force-app/main/default/objects/Product2/fields/Collection__c.field-meta.xml
<CustomField>
    <fullName>Collection__c</fullName>
    <label>Collection</label>
    <length>255</length>
    <type>Text</type>
</CustomField>