force-app/main/default/objects/Product2/fields/Color__c.field-meta.xml
<CustomField>
    <fullName>Color__c</fullName>
    <label>Color</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Verd Mig</fullName>
            </value>
            <value>
                <fullName>Violeta</fullName>
            </value>
            <value>
                <fullName>Groc Canari</fullName>
            </value>
            <value>
                <fullName>Cuir</fullName>
            </value>
            <value>
                <fullName>Blau Maldiva</fullName>
            </value>
            <value>
                <fullName>Mandarina</fullName>
            </value>
            <value>
                <fullName>Verd Amazona</fullName>
            </value>
            <value>
                <fullName>Carmí</fullName>
            </value>
            <value>
                <fullName>Roig</fullName>
            </value>
            <value>
                <fullName>Groc llimona</fullName>
            </value>
            <value>
                <fullName>Groc or</fullName>
            </value>
            <value>
                <fullName>Siena fosc</fullName>
            </value>
            <value>
                <fullName>Groc</fullName>
            </value>
            <value>
                <fullName>Lila</fullName>
            </value>
            <value>
                <fullName>Multicolor</fullName>
            </value>
            <value>
                <fullName>Negre</fullName>
            </value>
            <value>
                <fullName>Or</fullName>
            </value>
            <value>
                <fullName>Plata</fullName>
            </value>
            <value>
                <fullName>Marró</fullName>
            </value>
            <value>
                <fullName>Beix</fullName>
            </value>
            <value>
                <fullName>Rosa</fullName>
            </value>
            <value>
                <fullName>Taronja</fullName>
            </value>
            <value>
                <fullName>Transparent</fullName>
            </value>
            <value>
                <fullName>Granat</fullName>
            </value>
            <value>
                <fullName>Verd</fullName>
            </value>
            <value>
                <fullName>Verd Fosc</fullName>
            </value>
            <value>
                <fullName>Vermell</fullName>
            </value>
            <value>
                <fullName>Blau</fullName>
            </value>
            <value>
                <fullName>Blanc</fullName>
            </value>
            <value>
                <fullName>Blau Fosc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>