force-app/main/default/objects/Product2/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <label>Course</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B1-BATXILLERAT 1 MATÈRIES COMU_</fullName>
            </value>
            <value>
                <fullName>B1A-</fullName>
            </value>
            <value>
                <fullName>B1C-BATXILLERAT 1 CIÈNCIES/TECNOL</fullName>
            </value>
            <value>
                <fullName>B1L-BATXILLERAT 1 HUMAN./SOCIA</fullName>
            </value>
            <value>
                <fullName>B2-BATXILLERAT 2 MATÈRIES COMUNES</fullName>
            </value>
            <value>
                <fullName>B2C-BATXILLERAT 2 CIÈNCIES/TECNOL</fullName>
            </value>
            <value>
                <fullName>B2D-BATXILLERAT 2 OPCIÓ ALEMANY_</fullName>
            </value>
            <value>
                <fullName>B2L-BATXILLERAT 2 HUMANITATS/SOCIA</fullName>
            </value>
            <value>
                <fullName>B2A-</fullName>
            </value>
            <value>
                <fullName>BASI-Bàsic A2</fullName>
            </value>
            <value>
                <fullName>BEG-Beginners A1</fullName>
            </value>
            <value>
                <fullName>BH-Business Higher C1</fullName>
            </value>
            <value>
                <fullName>BP-Business Preliminary B1</fullName>
            </value>
            <value>
                <fullName>BV-Business Vantage B2</fullName>
            </value>
            <value>
                <fullName>CF-CICLE FORMATIU GM GS</fullName>
            </value>
            <value>
                <fullName>CF-CAI-CURES AUXILIARS D&apos;INFERMERIA G</fullName>
            </value>
            <value>
                <fullName>CF00-CICLES FORMATIUS</fullName>
            </value>
            <value>
                <fullName>CF02-ADMINISTRACIÓ FINANCES GS 2</fullName>
            </value>
            <value>
                <fullName>CF03-GESTIÓ ADMINISTRATIVA GM</fullName>
            </value>
            <value>
                <fullName>CF04-GESTIÓ ADMINISTRATIVA</fullName>
            </value>
            <value>
                <fullName>CF22-ELECTRÒNICA 1</fullName>
            </value>
            <value>
                <fullName>CF25-DESENVOLUPAMENT EQUIPS 1</fullName>
            </value>
            <value>
                <fullName>CF37-MECANITZACIÓ 1</fullName>
            </value>
            <value>
                <fullName>CF47-FARMÀCIA</fullName>
            </value>
            <value>
                <fullName>CF49-FRED TÈRMICS I FLUIDS 2</fullName>
            </value>
            <value>
                <fullName>CF65-COMERÇ I MARKETING GS</fullName>
            </value>
            <value>
                <fullName>CF76-EDUCACIÓ INFANTIL 1 GS</fullName>
            </value>
            <value>
                <fullName>CF89-CARROSSERIA 1</fullName>
            </value>
            <value>
                <fullName>CF90-CARROSSERIA 2</fullName>
            </value>
            <value>
                <fullName>CF95-ATENCIÓ SOCIOSANITÀRIA 1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>