force-app/main/default/objects/Product2/fields/ECO_Certified__c.field-meta.xml
<CustomField>
    <fullName>ECO_Certified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ECO Certified</label>
    <type>Checkbox</type>
</CustomField>