force-app/main/default/objects/Product2/fields/Group_of_Goods__c.field-meta.xml
<CustomField>
    <fullName>Group_of_Goods__c</fullName>
    <label>Group of Goods</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>