force-app/main/default/objects/Product2/fields/Illustrator__c.field-meta.xml
<CustomField>
    <fullName>Illustrator__c</fullName>
    <label>Illustrator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>