force-app/main/default/objects/Product2/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Català</fullName>
            </value>
            <value>
                <fullName>Alemany</fullName>
            </value>
            <value>
                <fullName>Anglès-americà</fullName>
            </value>
            <value>
                <fullName>Anglès-britanic</fullName>
            </value>
            <value>
                <fullName>Anglés-Xinés</fullName>
            </value>
            <value>
                <fullName>Castella</fullName>
            </value>
            <value>
                <fullName>Francès</fullName>
            </value>
            <value>
                <fullName>Italià</fullName>
            </value>
            <value>
                <fullName>Rus</fullName>
            </value>
            <value>
                <fullName>Valencià</fullName>
            </value>
            <value>
                <fullName>Japonès</fullName>
            </value>
            <value>
                <fullName>Euskara</fullName>
            </value>
            <value>
                <fullName>Altres</fullName>
            </value>
            <value>
                <fullName>Aranès</fullName>
            </value>
            <value>
                <fullName>PORTUGUÈS</fullName>
            </value>
            <value>
                <fullName>GALLEG</fullName>
            </value>
            <value>
                <fullName>ÀRAB</fullName>
            </value>
            <value>
                <fullName>XINÈS</fullName>
            </value>
            <value>
                <fullName>Neerlandès</fullName>
            </value>
            <value>
                <fullName>POLAC</fullName>
            </value>
            <value>
                <fullName>Multilíngues</fullName>
            </value>
            <value>
                <fullName>Romanès</fullName>
            </value>
            <value>
                <fullName>Ucraïnès</fullName>
            </value>
            <value>
                <fullName>Grec</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>