force-app/main/default/objects/Product2/fields/Left_Handed__c.field-meta.xml
<CustomField>
    <fullName>Left_Handed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Left Handed</label>
    <type>Checkbox</type>
</CustomField>