force-app/main/default/objects/Product2/fields/Product_Description_ES__c.field-meta.xml
<CustomField>
    <fullName>Product_Description_ES__c</fullName>
    <label>Product Description_ES</label>
    <type>TextArea</type>
</CustomField>