force-app/main/default/objects/Product2/fields/Product_URL_CAT__c.field-meta.xml
<CustomField>
    <fullName>Product_URL_CAT__c</fullName>
    <label>Product URL CAT</label>
    <type>Url</type>
</CustomField>