force-app/main/default/objects/Product2/fields/Product_URL_ESP__c.field-meta.xml
<CustomField>
    <fullName>Product_URL_ESP__c</fullName>
    <label>Product URL ESP</label>
    <type>Url</type>
</CustomField>