force-app/main/default/objects/Product2/fields/Renglo__c.field-meta.xml
<CustomField>
    <fullName>Renglo__c</fullName>
    <label>Rengló</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>