force-app/main/default/objects/Product2/fields/Size__c.field-meta.xml
<CustomField>
    <fullName>Size__c</fullName>
    <label>Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>34-36</fullName>
            </value>
            <value>
                <fullName>37-39</fullName>
            </value>
            <value>
                <fullName>De 9 a 11 anys</fullName>
            </value>
            <value>
                <fullName>40-42</fullName>
            </value>
            <value>
                <fullName>43-45</fullName>
            </value>
            <value>
                <fullName>46-48</fullName>
            </value>
            <value>
                <fullName>De 2 a 3 anys</fullName>
            </value>
            <value>
                <fullName>De 3 a 4 anys</fullName>
            </value>
            <value>
                <fullName>De 3 a 5 anys</fullName>
            </value>
            <value>
                <fullName>De 4 a 6 anys</fullName>
            </value>
            <value>
                <fullName>De 5 a 6 anys</fullName>
            </value>
            <value>
                <fullName>44-47</fullName>
            </value>
            <value>
                <fullName>De 6 a 7 anys</fullName>
            </value>
            <value>
                <fullName>De 7 a 9 anys</fullName>
            </value>
            <value>
                <fullName>L</fullName>
            </value>
            <value>
                <fullName>Talla única</fullName>
            </value>
            <value>
                <fullName>De 1 a 2 anys</fullName>
            </value>
            <value>
                <fullName>De 10 a 12 anys</fullName>
            </value>
            <value>
                <fullName>XS</fullName>
            </value>
            <value>
                <fullName>De 7 a 8 anys</fullName>
            </value>
            <value>
                <fullName>35-38</fullName>
            </value>
            <value>
                <fullName>39-42</fullName>
            </value>
            <value>
                <fullName>43-46</fullName>
            </value>
            <value>
                <fullName>De 12 a 13 anys</fullName>
            </value>
            <value>
                <fullName>M</fullName>
            </value>
            <value>
                <fullName>S</fullName>
            </value>
            <value>
                <fullName>De 0 a 2 mesos</fullName>
            </value>
            <value>
                <fullName>De 0 a 6 mesos</fullName>
            </value>
            <value>
                <fullName>De 8 a 10 anys</fullName>
            </value>
            <value>
                <fullName>De 6 a 12 mesos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>