force-app/main/default/objects/Product2/fields/Special_Product__c.field-meta.xml
<CustomField>
    <fullName>Special_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Special Product</label>
    <type>Checkbox</type>
</CustomField>