force-app/main/default/objects/Product2/fields/Subject_Matter__c.field-meta.xml
<CustomField>
    <fullName>Subject_Matter__c</fullName>
    <label>Subject Matter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>