force-app/main/default/objects/Product2/fields/Sustainable__c.field-meta.xml
<CustomField>
    <fullName>Sustainable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sustainable</label>
    <type>Checkbox</type>
</CustomField>