force-app/main/default/objects/Product2/fields/Translator__c.field-meta.xml
<CustomField>
    <fullName>Translator__c</fullName>
    <label>Translator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>