force-app/main/default/objects/Product2/fields/Type_Font__c.field-meta.xml
<CustomField>
    <fullName>Type_Font__c</fullName>
    <label>Type Font</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pal</fullName>
            </value>
            <value>
                <fullName>Lligada</fullName>
            </value>
            <value>
                <fullName>Impremta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>