force-app/main/default/objects/Product2/fields/Year_of_Publication__c.field-meta.xml
<CustomField>
    <fullName>Year_of_Publication__c</fullName>
    <label>Year of Publication</label>
    <type>Date</type>
</CustomField>